Compile and run iobuf.py unit test in fbthrift-oss
Builds elements of libthrift-py3 required, limited to those critical to
run and iobuf unit tests.

Cython extensions, expect a regular file structure. To provide this,
trees of symbolic links and touched __init__.p* files are created within
CMake rule before setup.py scripts are called to invoke Cython and
compile the extensions.

Cython extensions are created as shared libraries, meaning that position
independent code must be used. For folly, the recently defined folly_pic
library is used for the link.

Folly must be compiled with the non-dfault CMake option
"PYTHON_EXTENSIONS" set to include the folly_pic library and folly
extensions that Thrift requires.

The cmake function thrift_generate is update to support "py3", this
takes care of the cython source file generation, but the Cython and then
CXX compile stages are handled by Cython's distutils extension.

Extensions cannot be compiled with setup.py directly, they rely on
parameters passed from CMake for include and library paths.

Test Plan:

Compile requires position independent code:
$ mkdir _build && cd _build
$ cmake  -DCMAKE_POSITION_INDEPENDENT_CODE=True ..
$ make -j 36

iobuf unit test is run like this:
$ cd thrift/lib/py3/test/gen-cpp2
$ python3 -m unittest -v test.iobuf

--- a/thrift/lib/CMakeLists.txt
+++ b/thrift/lib/CMakeLists.txt
@@ -3,6 +3,7 @@ set(LIB_HOME ${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(thrift)
 add_subdirectory(cpp)
 add_subdirectory(cpp2)
+add_subdirectory(py3)
 
 set(LIB_DIRS
   thrift
