Handle unsupported build platforms for thrift-py3
Ensure required tools are present if requested to include thrift-py3 in
the build targets.

--- a/thrift/lib/CMakeLists.txt
+++ b/thrift/lib/CMakeLists.txt
@@ -3,7 +3,9 @@ set(LIB_HOME ${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(thrift)
 add_subdirectory(cpp)
 add_subdirectory(cpp2)
-add_subdirectory(py3)
+if (thriftpy3)
+  add_subdirectory(py3)
+endif ()
 
 set(LIB_DIRS
   thrift
