--- a/thrift/lib/cpp2/transport/rsocket/CMakeLists.txt
+++ b/thrift/lib/cpp2/transport/rsocket/CMakeLists.txt
@@ -1,13 +1,11 @@
-# Set the lib directory
-set(LIB_THRIFT_HOME ${CMAKE_CURRENT_SOURCE_DIR})
 
 thrift_generate(
   "Config" #file_name
   "" #services
   "cpp2" #language
   "" #options
-  "${LIB_THRIFT_HOME}" #file_path
-  "${LIB_THRIFT_HOME}" #output_path
+  "${CMAKE_CURRENT_SOURCE_DIR}" #file_path
+  "${CMAKE_CURRENT_BINARY_DIR}" #output_path
   "thrift/lib/cpp2/transport/rsocket" #include_prefix
 )
 
