--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,7 @@ endif(lib_only OR build_all)
 
 if(thriftpy3)
   find_package(PythonInterp 3.6 REQUIRED)
+  find_package(PythonLibs 3 REQUIRED)
   find_package(Cython 0.29 REQUIRED)
 endif()
 
