Use Folly includes explicitly for py3/test cpp libs
Builds fail, when folly is not installed to a default location, for
example using a staging dir. For the majority of thrift libraries the
folly include path is picked up from interface properties of linked
libraries. But for py3/test these object libraries cannot be "linked"
so use FOLLY_INCLUDE_DIR from imported config.

Test Plan:

make fbthrift on a clean system (without Folly already installed);
Install folly to a staging dir, as we do in LogDevice, and build
fbthrift with -Dthriftpy3=ON.
Without this fix the build with fail to find headers, with this fix it
succeeds.

--- a/thrift/lib/py3/test/CMakeLists.txt
+++ b/thrift/lib/py3/test/CMakeLists.txt
@@ -13,6 +13,7 @@ macro(thrift_py3_test filename services)
 
   set_target_properties(${filename}-cpp2-obj
      PROPERTIES POSITION_INDEPENDENT_CODE True)
+  target_include_directories(${filename}-cpp2-obj PUBLIC ${FOLLY_INCLUDE_DIR})
 
   thrift_generate(
     ${filename}
